added sprites and textures

--- a/meson.build
+++ b/meson.build
@@ -6,9 +6,12 @@ project(
     default_options : ['c_std=c11', 'c_visibility=default']
 )
 
+cc = meson.get_compiler('c')
+
 # Find dependencies
 glfw = dependency('glfw3', required: true)
 opengl = dependency('gl', required: true)
+m = cc.find_library('m', required: true)
 
 # Glad Dependency building
 glad_sources = files('vendor/glad.c')
@@ -21,13 +24,15 @@ glad = declare_dependency(
 engine_sources = files(
     'src/renderer.c',
     'src/window.c',
-    'src/quad.c'
+    'src/quad.c',
+    'src/sprite.c',
+    'src/texture.c'
 )
 engine = shared_library(
     'noctyra',
     engine_sources,
     include_directories: include_directories('include'),
-    dependencies: [glfw, opengl, glad],
+    dependencies: [glfw, opengl, glad, m],
     install: true
 )
 
@@ -37,8 +42,8 @@ executable(
     [
         'example/main.c',
     ],
-    include_directories: include_directories('include'),
-    dependencies: [glfw, opengl, glad],
+    include_directories: include_directories('include', 'vendor/include'),
+    dependencies: [glfw, opengl, glad, m],
     link_with: engine,
     install: true
 )
